# bashers-delight

./: CMakeLists.txt  bdr_library.cmake  bdr_viewer.cmake  dependencies.cmake
bdr/: bdr.h  bdr.inl  bdr_AllocationsBlock.cpp  bdr_AllocationsBlock.h  bdr_Buffer.cpp  bdr_Buffer.h  bdr_BufferDeviceAddressExtension.cpp  bdr_BufferMemoryBarrier.h  bdr_CommandPool.cpp  bdr_CommandPool.h  bdr_Common.inl  bdr_ComputePipeline.cpp  bdr_ComputePipeline.h  bdr_DescriptorIndexingExtension.h  bdr_DescriptorPool.cpp  bdr_DescriptorPool.h  bdr_DescriptorSetLayout.cpp  bdr_DescriptorSetLayout.h  bdr_Device.cpp  bdr_Device.h  bdr_Extension.cpp  bdr_Extension.h  bdr_FramebufferPool.cpp  bdr_FramebufferPool.h  bdr_GraphicsPipeline.cpp  bdr_GraphicsPipeline.h  bdr_Helpers.cpp  bdr_Helpers.h  bdr_Image.cpp  bdr_Image.h  bdr_ImageMemoryBarrier.h  bdr_IndexBuffer.cpp  bdr_IndexBuffer.h  bdr_Instance.cpp  bdr_Instance.h  bdr_MultithreadPool.cpp  bdr_MultithreadPool.h  bdr_Pipeline.cpp  bdr_Pipeline.h  bdr_RayTracingAccelerationStructure.cpp  (+19 more)
bdr/Extensions/: bdr_BufferDeviceAddressExtension.h  bdr_RayTracingShaderBindingTable.h
bdr/extensions/: bdr_BufferDeviceAddressExtension.cpp  bdr_BufferDeviceAddressExtension.h  bdr_DescriptorIndexingExtension.cpp  bdr_DescriptorIndexingExtension.h  bdr_Extension.cpp
bdr/extensions/ray_tracing/: bdr_RayTracingAccelerationStructure.h  bdr_RayTracingBLASEntry.cpp  bdr_RayTracingBLASEntry.h  bdr_RayTracingExtension.cpp  bdr_RayTracingExtension.h  bdr_RayTracingPipeline.cpp  bdr_RayTracingPipeline.h  bdr_RayTracingTLASEntry.h
bdr/implementations/: bdr_ctle_implementation.cpp  bdr_vma_implementation.cpp
src/viewer/: main.cpp
tests/: SystemTest.cpp  TestImages.h
